--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <artifactId>web-frontend</artifactId>
     <version>0.1.0</version>
 
+    <!-- Test -->
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
